Fix html element getting mispositioned after device rotation on iOS
The solution is to set both 'html' and 'body' elements to 100vh height.

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+html,
 body {
   background-color: #008c81;
   margin: 0;
